Fixed menu functionality, leaderboards not showing in galleries.

--- a/wp-content/themes/twentythirteen-child/style.css
+++ b/wp-content/themes/twentythirteen-child/style.css
@@ -845,7 +845,7 @@ Social Media Buttons
 	}
 
 }
-@media (min-width: 1px) {
+@media (max-width: 1064px) {
 	.menu-toggle {
 		cursor: pointer;
 		display: inline-block !important;
